# FlumenPlot

./: .gitignore  CS1_lane1_db1.metaphlan_profile.txt  README.md  pyproject.toml  sankey.html
example_data/: ETHIOPIA.mpa.txt  FIJI_1.mpa.txt  list.txt
src/flumenplot/: cli.py  generate_report.py  kraken2sankey.py  mpa2sankey.py  order.py  template.html
src/flumenplot/templates/: dev.html  dev_data.js  dev_data1.js  index.html  sankey.css  sankey.js  template.html
