[project]
name = "flumenplot"
version = "0.3.1"
description = ""
authors = [
    {name = "karthik30122001",email = "karthikeyan.vpani@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
flumenplot = "flumenplot.cli:main"

[tool.poetry]
packages = [{include = "flumenplot", from = "src"}]

[tool.poetry.dependencies]
pandas = "2.3.2"
scikit-bio = ">=0.6.0"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
